
	* Fixed bug #18568: insufficient URL conversion of Redirects with umlauts
	* Fixed bug #18527: URLs with a . at the end do not produce 404 error
	* Fixed bug #18437: Wrong ID in shortcut mode "Parent page"
	* Fixed bug #18443: produce fewer results on title lookup
	* Fixed bug #18190: apendMissingSlash handling different if a point is in query parameter

2012-06-19  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Snowflake task 1570.179: cHash issues with multilanguage domains

2012-05-29  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #18551: target redirect path is saved in lower case
	* Fixed bug #18532: cHash is incorrectly recalculated if the postVar is discarded due to the empty segment

2012-05-22  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #18477: cHash is wrong when using noMatch=bypass with the last parameter in the postVarSets

2012-04-23  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #18462: wrong definition for uid column in tx_realurl_redirects
	* Fixed bug #18479: redirect statistics sometimes are not updated

2012-02-17  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Released version 1.12.1

2012-02-02  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #18447: Many domains in the same installation is not supported by the _DOMAINS
	* Fixed bug #18448: cHash calculation sometimes wrong

2011-12-21  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fix: BE module for redirects is case-insensitive but FE handling is case-sensitive
	* Released RealURL 1.12.0

2011-11-30  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Feature: allow redirects for various domains
	* Fixed bug #18354: Wrong cHash when valueDefault and enableCHashCache is used (thanks to Helmut Hummel)

2011-11-17  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Manual update: prefer absRefPrefix to baseUrl from now on

2011-11-11  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #18322: Deprecated function call to t3lib_div::testInt()
